[package]
name = "hedgehog"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
config = "0.15.11"
toml = "0.8.21"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
teloxide = { version = "0.15.0", features = ["macros"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tracing = "0.1.41"
hmac = "0.12"
sha2 = "0.10"
anyhow = "1.0"
dotenv = "0.15"
hex = "0.4.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
urlencoding = "2.1.3"
serde_path_to_error = "0.1.17"
rust_decimal = { version = "1.37.1", features = ["serde-with-str"] }
rust_decimal_macros = "1.37.1"
futures = "0.3.31"
chrono = "0.4"
winres = "0.1"

[build-dependencies]
embed-resource = "3.0.2"